--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body {
     font-family: 'Lato', sans-serif;
 }
+.title-head{
+    text-align: center;
+    color: crimson;
+}
 header {
     text-align: center;
 }
@@ -18,6 +22,7 @@ input:focus, input:hover {
     box-shadow: 0 0 5px -1px crimson;
     background-color: rgba(220, 20, 60, 0.05);
 }
+
 li {
     list-style: none;
     border: solid 1px rgba(220, 20, 60, 0.52);
@@ -43,6 +48,15 @@ li:hover {
 li > span.text {
     padding-right: 20px;
 }
+li > div > span.check {
+    float: right;
+    padding: 5px;
+    height: 8px;
+    line-height: 5px;
+    color: crimson;
+    cursor: pointer;
+}
+
 li > div > span.delete {
     float: right;
     border: solid 1px crimson;
@@ -62,9 +76,7 @@ li > div > i >{
     position: absolute;
     top: 20px;
     right: -7px;
-    /* border: 1px solid; */
     border-radius: 50%;
-    /* padding: 11px; */
     height: 30px;
     width: 30px;
     display: flex !important;
@@ -80,6 +92,11 @@ li > div > i >{
     input,main {
         width: 100%;
     }
+    main{
+        margin: 10%;
+        display: flex;
+        flex-direction: column;
+    }
 }
 @media (min-width: 576px) {
     input,main {
@@ -87,5 +104,7 @@ li > div > i >{
     }
     main {
         margin-left: 10%;
+        display: flex;
+        flex-direction: row;
     }
 }
